fixed hero layout shift on load

--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -13,3 +13,7 @@ header {
     }
 }
 
+#smooth-wrapper {
+    margin-top: 0;
+}
+
